--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "filereader": "^0.10.3",
-    "fs": "^0.0.1-security",
-    "jimp": "^0.16.1",
     "node": "^17.0.1",
     "nodemon": "^2.0.14",
-    "uuid": "^3.3.2"
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
+    "node-fetch": "^2.6.5"    
   },
   "devDependencies": {},
   "description": ""
